--- a/ui/message.ui
+++ b/ui/message.ui
@@ -29,7 +29,7 @@
     <set>QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="error_label">
+  <widget class="QLabel" name="message_label">
    <property name="geometry">
     <rect>
      <x>10</x>
