--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>442</width>
-    <height>592</height>
+    <width>452</width>
+    <height>656</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -16,14 +16,158 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="font">
+   <font>
+    <family>Microsoft YaHei</family>
+    <pointsize>7</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Main</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>false</bool>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">/* Set the background color for all widgets */
+QWidget {
+    background-color: #0d1819;
+}
+
+/* Style for QLabel (adjust fonts and text color) */
+QLabel {
+    color: #858261;
+    font-size: 12px;
+}
+
+QLabel::disabled {
+    color: #19302e;
+}
+
+/* Style for QLabel */
+QLabel#accounts_header, QLabel#settings_header {
+    color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #30584f, stop: 1 #44605b);
+    font-weight: bold; /* Make the font thick */
+    font-size: 18px; /* Adjust the font size as needed */
+}
+
+/* Style for QLineEdit (adjust border, background, and text color) */
+QLineEdit {
+    border: 1px solid #858261;
+    background-color: #213a38;
+    color: #858261;
+    padding: 5px;
+}
+
+QLineEdit::disabled {
+	border: 1px solid #19302e;
+    background-color: #0c1718;
+}
+
+/* Style for QPushButton (adjust background, text color, and squared borders) */
+QPushButton {
+    background: qlineargradient(x1: 0, y1: 1, x2: 0, y2: 0, stop: 0 #132326, stop: 0.4 #193233, stop: 1 #254b41);
+    color: #858261;
+    border: 2px solid #858261; /* Squared border */
+    /* border-radius: 0px; */
+    font-size: 14px;
+    padding: 0px;
+}
+
+QPushButton#paypal_button:hover {
+    background: #ffffff;
+}
+
+/* Style for QPushButton (adjust background, text color, and squared borders) */
+QPushButton::disabled {
+    background: #213a38;
+    color: #19302e;
+	border: 1px solid #19302e;
+    background-color: #0c1718;
+}
+
+/* Change QPushButton appearance on hover and pressed states */
+QPushButton::enabled:hover {
+    background-color: #0c1718;
+}
+
+QPushButton::enabled:pressed {
+    background-color: #0c1718;
+    color: #858261; /* Restore text color on press */
+}
+
+/* Style for QTableWidget (adjust border and row height) */
+QTableWidget {
+    border: 1px solid #858261;
+    alternate-background-color: #213a38;
+    color: #858261; /* Text color for table cells */
+}
+
+/* Style for table header (adjust fonts, background color, and text color) */
+QHeaderView::section {
+    background-color: #0c1718;
+    color: #858261;
+    font-size: 14px;
+    font-weight: bold; /* Set the font weight to normal for the header */
+}
+
+/* Style for QScrollBar (adjust background, handle, and border colors) */
+QScrollBar:vertical {
+    background: rgba(11, 20, 16, 128); /* Slightly transparent background */
+    border: 2px solid transparent; /* Thicker border for main scroll bar */
+
+    /* Hide the arrow buttons by setting their width to zero */
+    QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
+        width: 0;
+		height: 0;
+    }
+}
+
+QScrollBar::handle:vertical {
+    background: rgba(11, 20, 16, 128); /* Slightly transparent background */
+    border: 1px solid #858261; /* Border for thumb */
+}
+
+/* Change QPushButton appearance on hover and pressed states */
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+    background: rgba(11, 20, 16, 128); /* Slightly transparent background */
+}
+
+QScrollBar::add-line:vertical {
+	height: 0px;
+}
+
+QScrollBar::sub-line:vertical {
+	height: 0px;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+	height: 0px;
+}
+
+/* Style for QCheckBox */
+QCheckBox {
+    spacing: 5px; /* Adjust the spacing between the checkbox and text if needed */
+}
+
+/* Style for QCheckBox label text */
+QCheckBox::indicator {
+    color: #858261; /* Text color for the checkbox label */
+    width: 12px; /* Adjust the width for square checkboxes */
+    height: 12px; /* Adjust the height for square checkboxes */
+	border: 1px solid #858261;
+}
+
+QCheckBox::indicator:checked {
+	background: qlineargradient(x1: 0.5, y1: 0.5, x2: 0, y2: 0, stop: 0 #858261, stop: 1 #b59e3a);
+}
+</string>
   </property>
   <widget class="QLineEdit" name="settings_lol_path_input">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>30</y>
+     <x>20</x>
+     <y>60</y>
      <width>391</width>
      <height>20</height>
     </rect>
@@ -32,9 +176,9 @@
   <widget class="QLabel" name="settings_lol_path_label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>81</width>
+     <x>20</x>
+     <y>40</y>
+     <width>391</width>
      <height>16</height>
     </rect>
    </property>
@@ -42,41 +186,12 @@
     <string>LoL Folder Path</string>
    </property>
   </widget>
-  <widget class="Line" name="line">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>110</y>
-     <width>421</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="settings_use_keepass_button">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>62</y>
-     <width>81</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Use KeePass</string>
-   </property>
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="settings_keepass_path_input">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>80</y>
-     <width>301</width>
+     <x>140</x>
+     <y>110</y>
+     <width>271</width>
      <height>20</height>
     </rect>
    </property>
@@ -87,9 +202,9 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>60</y>
-     <width>101</width>
+     <x>140</x>
+     <y>90</y>
+     <width>211</width>
      <height>16</height>
     </rect>
    </property>
@@ -100,9 +215,9 @@
   <widget class="QLineEdit" name="new_account_name_input">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>160</y>
-     <width>131</width>
+     <x>20</x>
+     <y>205</y>
+     <width>201</width>
      <height>20</height>
     </rect>
    </property>
@@ -110,15 +225,15 @@
   <widget class="QPushButton" name="new_account_add_button">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>160</y>
-     <width>121</width>
-     <height>71</height>
+     <x>20</x>
+     <y>285</y>
+     <width>421</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>14</pointsize>
+     <pointsize>-1</pointsize>
     </font>
    </property>
    <property name="text">
@@ -131,9 +246,9 @@
   <widget class="QLineEdit" name="new_account_keepass_reference_input">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>160</y>
-     <width>131</width>
+     <x>240</x>
+     <y>205</y>
+     <width>201</width>
      <height>20</height>
     </rect>
    </property>
@@ -144,8 +259,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>140</y>
+     <x>20</x>
+     <y>185</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -160,8 +275,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>140</y>
+     <x>240</x>
+     <y>185</y>
      <width>131</width>
      <height>16</height>
     </rect>
@@ -173,9 +288,9 @@
   <widget class="QLineEdit" name="new_account_username_input">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>131</width>
+     <x>20</x>
+     <y>255</y>
+     <width>201</width>
      <height>20</height>
     </rect>
    </property>
@@ -183,9 +298,9 @@
   <widget class="QLineEdit" name="new_account_password_input">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>210</y>
-     <width>131</width>
+     <x>240</x>
+     <y>255</y>
+     <width>201</width>
      <height>20</height>
     </rect>
    </property>
@@ -196,8 +311,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>190</y>
+     <x>20</x>
+     <y>235</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -212,8 +327,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>190</y>
+     <x>240</x>
+     <y>235</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -225,8 +340,8 @@
   <widget class="QTableWidget" name="accounts_table">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>240</y>
+     <x>20</x>
+     <y>325</y>
      <width>421</width>
      <height>281</height>
     </rect>
@@ -246,19 +361,21 @@
    <attribute name="verticalHeaderVisible">
     <bool>false</bool>
    </attribute>
+   <attribute name="verticalHeaderDefaultSectionSize">
+    <number>10</number>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="start_lol_client_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>530</y>
+     <x>20</x>
+     <y>615</y>
      <width>101</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>⚡
-Start LoL Client</string>
+    <string>Start LoL</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
@@ -267,15 +384,14 @@ Start LoL Client</string>
   <widget class="QPushButton" name="restart_lol_client_button">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>530</y>
+     <x>240</x>
+     <y>615</y>
      <width>101</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>🔄
-Restart LoL Client</string>
+    <string>Restart LoL</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
@@ -284,15 +400,14 @@ Restart LoL Client</string>
   <widget class="QPushButton" name="stop_lol_client_button">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>530</y>
+     <x>130</x>
+     <y>615</y>
      <width>101</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>⛔
-Stop LoL Client</string>
+    <string>Stop LoL</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
@@ -301,14 +416,19 @@ Stop LoL Client</string>
   <widget class="QPushButton" name="settings_lol_path_file_selector_button">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>30</y>
+     <x>420</x>
+     <y>60</y>
      <width>21</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>-1</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string>📂</string>
+    <string>...</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
@@ -317,14 +437,19 @@ Stop LoL Client</string>
   <widget class="QPushButton" name="settings_keepass_path_file_selector_button">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>80</y>
+     <x>420</x>
+     <y>110</y>
      <width>21</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>-1</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string>📂</string>
+    <string>...</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
@@ -333,10 +458,10 @@ Stop LoL Client</string>
   <widget class="QPushButton" name="paypal_button">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>530</y>
+     <x>350</x>
+     <y>615</y>
      <width>91</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -346,11 +471,77 @@ Stop LoL Client</string>
     <bool>false</bool>
    </property>
   </widget>
+  <widget class="QCheckBox" name="settings_keepass_checkbox">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>110</y>
+     <width>21</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="settings_keepass_path_label_2">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>110</y>
+     <width>91</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Use KeePass</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="accounts_header">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>160</y>
+     <width>431</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Accounts</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="settings_header">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>15</y>
+     <width>431</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Settings</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>settings_lol_path_input</tabstop>
   <tabstop>settings_lol_path_file_selector_button</tabstop>
-  <tabstop>settings_use_keepass_button</tabstop>
   <tabstop>settings_keepass_path_input</tabstop>
   <tabstop>settings_keepass_path_file_selector_button</tabstop>
   <tabstop>new_account_name_input</tabstop>
