--- a/ui/password.ui
+++ b/ui/password.ui
@@ -13,6 +13,42 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+    background-color: #0d1819;
+}
+
+QLabel {
+    color: #858261;
+    font-size: 12px;
+}
+
+QLineEdit {
+	font-size: 12px;
+    border: 1px solid #858261;
+    background-color: #213a38;
+    color: #858261;
+}
+
+QPushButton {
+    background: qlineargradient(x1: 0, y1: 1, x2: 0, y2: 0, stop: 0 #132326, stop: 0.4 #193233, stop: 1 #254b41);
+    color: #858261;
+    border: 2px solid #858261;
+    font-size: 14px;
+    padding: 0px;
+}
+
+
+QPushButton::enabled:hover {
+    background-color: #0c1718;
+}
+
+QPushButton::enabled:pressed {
+    background-color: #0c1718;
+    color: #858261;
+}
+</string>
+  </property>
   <widget class="QLabel" name="password_label">
    <property name="geometry">
     <rect>
