--- a/ui/main.ui
+++ b/ui/main.ui
@@ -16,6 +16,18 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>452</width>
+    <height>656</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>452</width>
+    <height>656</height>
+   </size>
+  </property>
   <property name="font">
    <font>
     <family>Microsoft YaHei</family>
@@ -93,6 +105,11 @@ QTableWidget {
     border: 1px solid #858261;
     alternate-background-color: #213a38;
     color: #858261;
+	padding: 0px;
+}
+
+QTableWidgetItem {
+	padding: 0px;
 }
 
 QHeaderView::section {
@@ -175,9 +192,9 @@ QCheckBox::indicator:checked {
   <widget class="QLineEdit" name="settings_keepass_path_input">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>50</x>
      <y>110</y>
-     <width>371</width>
+     <width>361</width>
      <height>21</height>
     </rect>
    </property>
@@ -188,7 +205,7 @@ QCheckBox::indicator:checked {
    </property>
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>50</x>
      <y>90</y>
      <width>211</width>
      <height>16</height>
@@ -198,7 +215,7 @@ QCheckBox::indicator:checked {
     <string>KeePass File Path</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="new_account_name_input">
+  <widget class="QLineEdit" name="new_account_title_input">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -229,17 +246,7 @@ QCheckBox::indicator:checked {
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="new_account_keepass_reference_input">
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>205</y>
-     <width>201</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="new_account_name_label">
+  <widget class="QLabel" name="new_account_title_label">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -252,23 +259,7 @@ QCheckBox::indicator:checked {
     </rect>
    </property>
    <property name="text">
-    <string>Name</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="new_account_keepass_reference_label">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>185</y>
-     <width>131</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>KeePass Reference</string>
+    <string>Title</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="new_account_username_input">
@@ -457,19 +448,6 @@ QCheckBox::indicator:checked {
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QCheckBox" name="settings_keepass_checkbox">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>110</y>
-     <width>16</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QLabel" name="accounts_header">
    <property name="enabled">
     <bool>true</bool>
@@ -508,14 +486,34 @@ QCheckBox::indicator:checked {
     <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
    </property>
   </widget>
+  <widget class="QPushButton" name="settings_keepass_create_button">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>110</y>
+     <width>21</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>-1</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>➕</string>
+   </property>
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>settings_lol_path_input</tabstop>
   <tabstop>settings_lol_path_file_selector_button</tabstop>
   <tabstop>settings_keepass_path_input</tabstop>
   <tabstop>settings_keepass_path_file_selector_button</tabstop>
-  <tabstop>new_account_name_input</tabstop>
-  <tabstop>new_account_keepass_reference_input</tabstop>
+  <tabstop>new_account_title_input</tabstop>
   <tabstop>new_account_username_input</tabstop>
   <tabstop>new_account_password_input</tabstop>
   <tabstop>new_account_add_button</tabstop>
