--- a/ui/message.ui
+++ b/ui/message.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>211</width>
-    <height>91</height>
+    <width>210</width>
+    <height>100</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>210</width>
+    <height>100</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>210</width>
+    <height>100</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -45,7 +63,7 @@ QPushButton::enabled:pressed {
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>60</y>
+     <y>70</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -63,7 +81,7 @@ QPushButton::enabled:pressed {
      <x>10</x>
      <y>10</y>
      <width>181</width>
-     <height>41</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
