--- a/ui/password.ui
+++ b/ui/password.ui
@@ -7,8 +7,26 @@
     <x>0</x>
     <y>0</y>
     <width>240</width>
-    <height>61</height>
+    <height>60</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>240</width>
+    <height>60</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>240</width>
+    <height>60</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -20,6 +38,11 @@
 
 QLabel {
     color: #858261;
+    font-size: 12px;
+}
+
+QLabel#error_label {
+    color: #ff0000;
     font-size: 12px;
 }
 
@@ -54,7 +77,7 @@ QPushButton::enabled:pressed {
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>191</width>
+     <width>221</width>
      <height>16</height>
     </rect>
    </property>
@@ -79,6 +102,19 @@ QPushButton::enabled:pressed {
    </property>
    <property name="clearButtonEnabled">
     <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="error_label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>50</y>
+     <width>221</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
